dodanie animacji przejścia

--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,11 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/fullpage.js/dist/fullpage.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/fullpage.js/vendors/scrolloverflow.min.js"],
             "es5BrowserSupport": true
           },
           "configurations": {
