--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@fullpage/angular-fullpage": "0.0.14",
+    "angular-svg-icon": "^8.0.0",
     "bootstrap": "^4.6.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
