--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/fullpage.js/dist/fullpage.css"
+              "node_modules/fullpage.js/dist/fullpage.css",
+              "node_modules/jquery/dist/jquery.min.js"
             ],
             "scripts": [
               "node_modules/fullpage.js/vendors/scrolloverflow.min.js"],
