--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-svg-icon": "^8.0.0",
     "bootstrap": "^4.6.0",
     "core-js": "^2.5.4",
+    "jquery": "^3.5.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
